# hexa-lang

./: .ai-native-algo-baseline  .chain  .clangd  .command  .doc  .dockerignore  .ext  .gitignore  .hardcode-baseline  .hexa-attrs  .hexa-lax-baseline  .loop  .ossify_seeds  .own  .own-rules.json  .raw  .raw-audit  .raw-ref  .roadmap  .roadmap.atp  .roadmap.bak.20260421-055406  .roadmap.bak.20260421-pre-roadmap-features  .roadmap.codegen  .roadmap.hexa-lang  .roadmap.lsp  .roadmap.runtime  .roadmap.stdlib  .roadmap.tools  CLAUDE.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md  a  build.sh  build_hexa.hexa  build_hexa.sh  build_hexa_compat.hexa  build_script.hexa  consciousness_bridge.py  (+11 more)
.cargo/: config.toml
.chain-state/: README.md
.claude/: settings.json
.github/: CODEOWNERS
.growth/: growth_state.json  scan.py
.hexa-cache/: .gitignore
.hexa-init/: stamp
.l5-discovery/: discoveries.jsonl  os_tools.jsonl
.raw-exemptions/: README.md  raw_6.list  raw_7.list
bench/: README.md  _probe_last_index_of.hexa  alloc_heavy.hexa  async_ckpt.hexa  bench_results.jsonl  bubble_sort_n16.hexa  bubble_sort_n256.hexa  check_regress.sh  clm_train_bench.hexa  dict_100k.hexa  fib_rec.hexa  grad_checkpoint.hexa  grad_checkpoint_7b.hexa  hxblas_bf16.hexa  hxblas_linux.hexa  import_alias_e2e.hexa  import_chain.hexa  import_from_e2e.hexa  import_py_e2e.hexa  import_searchpath_e2e.hexa  insertion_sort_n16.hexa  insertion_sort_n256.hexa  m4_inference_e2e.hexa  matmul_256.hexa  merge_sort_n256.hexa  native_int_specialize.hexa  oop_heavy.hexa  oop_heavy_wide.hexa  parser_throughput.hexa  probe.hexa  py_get_doc_e2e.hexa  quick_sort_n256.hexa  simple_loop.hexa  zeta_compare.jsonl
config/: attr_format_sources.json  bootstrap_convergence.json  emergence_patterns.json  eso_metrics.json  grammar_format_sources.json  hexa_ir_convergence.json
convergence/: hexa_lang_upstream_2026_04_28_anima_eeg_gaps.convergence  r4_raw109to126_hexa_lang_propagation_plan_2026_04_28.convergence
doc/: ai-native-attrs.md  ai-native.md  anima_raw_adoption.md  bootstrap_convergence.json  bt_commands.json  from-n6-architecture-2026-04-14.md  fuse.md  grammar.jsonl  hexa-ai-prompt.md  hexa-hot-path.md  hexa-lang-spec.json  hexa_daemon.md  hexa_grammar_issues.jsonl  hexa_init_scaffold_research.md  hexa_ir_convergence.json  hexa_lang_breakthroughs.json  hexa_toml_spec.json  language_reference.hexa  ml_commands.json  ml_next_level.json  ml_pipeline.json  n6-constants.md  nexus-roadmap.md  os_level_lock.md  os_level_lock_setup.md  phase4_editor.md  porting_feedback.md  publish-checklist.md  reference.md  roi.json  roi_commands.json  rt-36-bytecode-design.md  rt-36-opcode-coverage.md  rt-38-a-phase2.md  rt-45-gpu-design.md  rt36-d-divergence-triage.md  rt_38_a.md  rt_commands.json  runtime_bottlenecks.json  runtime_port_plan.md  (+8 more)
docs/: ai-native.md  anima_edict_adoption.md  anima_raw_adoption.md  anima_roi_triage_20260424.md  auto_marker_protocol_20260426.md  bench.md  benchmarks.md  conversion-guide.md  cross_repo_notifications_20260423.md  drill_meta_roadmap_engine_audit_20260423.md  from-n6-architecture-2026-04-14.md  hexa-ai-prompt.md  hexa-examples.json  hexa-ir-benchmark.md  hexa-lang-spec.json  hexa_beta_main_top10_design_20260422.md  hexa_daemon_option_a_plan_2026_05_06.ai.md  hexa_init_scaffold_research.md  hexa_lang_attr_ecosystem_b3_b4_b6_b7_b9_landed_2026_05_02.ai.md  hexa_lang_composability_a1_a5_b2_b5_landed_2026_05_02.ai.md  hexa_lang_meta_evolution_proposal_20260422.md  hexa_lang_safety_a3_a4_a8_landed_2026_05_02.ai.md  hexa_lang_self_mk2_tuning_landed_2026_05_02.ai.md  hexa_real_perf32_swap_20260427.md  hexa_speedup_brainstorm_2026_05_06.ai.md  hexa_url_complete_support_upstream_spec_2026_05_05.ai.md  interp_regression_20260424.md  interpreter_stale_root_cause_20260423.md  loss_free_roi_brainstorm_20260422.md  memory_cap_bypass_marker_20260428.md  meta_engine_cross_repo_analysis_20260423.md  migration_nexus_to_hexalang_20260422.md  mk2-porting-blockers.md  n6-porting-blockers.md  new_paradigm_edu_tension_drop_20260421.md  next2.txt  next_session_self_host_m1_m5.md  nexus-roadmap.md  nexus-scan-report.md  nexus6-roadmap.md  (+33 more)
example/: anima_consciousness_step.hexa  anima_convergence_proof.hexa  anima_engine_ported.hexa  anima_full_engine.hexa  anima_gru_fused.hexa  anima_mega_demo.hexa  anima_online_learner.hexa  anima_phi_lazy.hexa  api_test.hexa  architecture_test.hexa  array_sum.hexa  arrconcat_min.hexa  async_pipeline.hexa  attr_inline_hot.hexa  auto_record_test.hexa  bank.hexa  banner_test.hexa  base64.hexa  bench_call_heavy.hexa  bench_fib_K30_vm.hexa  bench_loop.hexa  bench_loop_native.c  bench_suite.hexa  bench_suite_native.c  benchmark_all.hexa  bridge_ensure_test.hexa  bridge_test.hexa  bsearch.hexa  bt_verification.hexa  builtin_min.hexa  check_project_test.hexa  classify_test.hexa  concurrency.hexa  config_test.hexa  consciousness_bootstrap.hexa  consciousness_hw.hexa  consciousness_laws.hexa  contract_desugar_demo.hexa  convergence.hexa  csv_sum.hexa  (+114 more)
examples/: anima_clm_training.hexa  anima_engine_ported.hexa  anima_hebbian_autograd.hexa  attr_simd.hexa  attr_symbolic.hexa  attr_test.hexa  base_conv.hexa  bench_fib_K30.hexa  bench_ir.hexa  bench_ir_native.c  bench_matrix.hexa  bench_suite_native.hexa  bench_suite_native.rs  benchmark.hexa  benchmark_ai_native.hexa  benchmark_gpu_beating.hexa  bf.hexa  bt_verification.hexa  calc.hexa  calc_min.hexa  compound_min.hexa  comptime_const.hexa  comptime_const_demo.hexa  concurrency.hexa  consciousness_bootstrap.hexa  consciousness_hw.hexa  consciousness_laws.hexa  contract_desugar_demo.hexa  csv_sum.hexa  csvql.hexa  diff.hexa  discovery_engine.hexa  egyptian_memory_demo.hexa  exec_min.hexa  factorial_min.hexa  fibonacci.hexa  fibonacci_memo.hexa  fizzbuzz_min.hexa  fn_param_min.hexa  forarray_min.hexa  (+67 more)
experiment/: rt36_bc_hello.hexa
gate/: HEXA_RESERVED.md  STDLIB_MAP.md  bash_allow_hook.hexa  claude_harness_pointer.hexa  (+20 more)
lib/hxnccl/: CMakeLists.txt  cmake_uninstall.cmake  hxnccl.c  smoke.c
lib/hxpyembed/: CMakeLists.txt  hxpyembed.c  smoke.c
(+3684 files in other folders)
