[package]
name = "hexa-lang"
version = "0.2.0"
edition = "2021"
description = "The Perfect Number Programming Language — every constant from n=6"
license = "MIT"
repository = "https://github.com/need-singularity/hexa-lang"

[[bin]]
name = "hexa"
path = "src/main.rs"

[dependencies]
cranelift = "0.130"
cranelift-module = "0.130"
cranelift-jit = "0.130"
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"
