[package]
name = "hexa-lang"
version = "1.0.0"
edition = "2021"
description = "The Perfect Number Programming Language — every constant from n=6"
license = "MIT"
repository = "https://github.com/need-singularity/hexa-lang"
homepage = "https://github.com/need-singularity/hexa-lang"
documentation = "https://github.com/need-singularity/hexa-lang/blob/main/docs/spec.md"
readme = "README.md"
keywords = ["programming-language", "compiler", "interpreter", "consciousness", "n6"]
categories = ["compilers", "development-tools"]
exclude = [
    "target/",
    "hexa",
    "hexa_test",
    ".claude/",
    ".shared/",
    "consciousness_bridge.py",
    "PLAN.md",
    "CLAUDE.md",
    "build.sh",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hexa"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native-only dependencies (JIT, HTTP, etc.)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2"
cranelift = "0.130"
cranelift-module = "0.130"
cranelift-jit = "0.130"
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev-fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 8
